--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,3 +4,4 @@ DATA:
   SOURCE_URL: "https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip"
   local_dir: data
   data_file_name: data.zip
+  unzip_data_dir: data
