model params defined

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -7,3 +7,9 @@ DATA:
   unzip_data_dir: data
   bad_data: bad_data
   parent_data_dir: PetImages
+
+params:
+  learning_rate: 0.001
+  loss: sparse_categorical_crossentropy
+  metrics: ["accuracy"]
+  img_shape: [180,180,3]
