--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -9,9 +9,15 @@ DATA:
   parent_data_dir: PetImages
   model_dir: model
   initial_model_file: init_model.h5
+  trained_model_file: trained_model.h5
 
 params:
   learning_rate: 0.001
   loss: sparse_categorical_crossentropy
   metrics: ["accuracy"]
   img_shape: [180,180,3]
+  batch_size: 32
+  validation_split: 0.2
+  buffer_size: 32
+  epochs: 1
+  seed: 42
