--- a/conda.yaml
+++ b/conda.yaml
@@ -1,4 +1,4 @@
-name: MLFlow-CNN-app
+name: D:\Data Science\Deep Learning\MLFlow-CNN-app\env
 channels:
   - defaults
 dependencies:
@@ -13,4 +13,82 @@ dependencies:
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.37.1=pyhd3eb1b0_0
   - wincertstore=0.2=py37haa95532_2
+  - pip:
+    - absl-py==1.0.0
+    - alembic==1.7.7
+    - astunparse==1.6.3
+    - cached-property==1.5.2
+    - cachetools==5.0.0
+    - charset-normalizer==2.0.12
+    - click==8.1.3
+    - cloudpickle==2.0.0
+    - colorama==0.4.4
+    - databricks-cli==0.16.6
+    - docker==5.0.3
+    - entrypoints==0.4
+    - flask==2.1.2
+    - flatbuffers==2.0
+    - gast==0.5.3
+    - gitdb==4.0.9
+    - gitpython==3.1.27
+    - google-auth==2.6.6
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - greenlet==1.1.2
+    - grpcio==1.46.1
+    - h5py==3.6.0
+    - idna==3.3
+    - importlib-metadata==4.11.3
+    - importlib-resources==5.7.1
+    - itsdangerous==2.1.2
+    - jinja2==3.1.2
+    - keras==2.8.0
+    - keras-preprocessing==1.1.2
+    - libclang==14.0.1
+    - mako==1.2.0
+    - markdown==3.3.7
+    - markupsafe==2.1.1
+    - mlflow==1.25.1
+    - numpy==1.21.6
+    - oauthlib==3.2.0
+    - opt-einsum==3.3.0
+    - packaging==21.3
+    - pandas==1.3.5
+    - pillow==9.1.0
+    - prometheus-client==0.14.1
+    - prometheus-flask-exporter==0.20.1
+    - protobuf==3.20.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pyjwt==2.4.0
+    - pyparsing==3.0.9
+    - python-dateutil==2.8.2
+    - pytz==2022.1
+    - pywin32==227
+    - pyyaml==6.0
+    - querystring-parser==1.2.4
+    - requests==2.27.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
+    - scipy==1.7.3
+    - six==1.16.0
+    - smmap==5.0.0
+    - sqlalchemy==1.4.36
+    - sqlparse==0.4.2
+    - tabulate==0.8.9
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.8.0
+    - tensorflow-io-gcs-filesystem==0.25.0
+    - termcolor==1.1.0
+    - tf-estimator-nightly==2.8.0.dev2021122109
+    - tqdm==4.64.0
+    - typing-extensions==4.2.0
+    - urllib3==1.26.9
+    - waitress==2.1.1
+    - websocket-client==1.3.2
+    - werkzeug==2.1.2
+    - wrapt==1.14.1
+    - zipp==3.8.0
 prefix: D:\Data Science\Deep Learning\MLFlow-CNN-app\env
